<?xml version="1.0"?>
<package format="2">
  <name>mm_gui_rviz_demo</name>
  <version>0.0.0</version>
  <description>The mm_gui_rviz_demo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mm-master@todo.todo">hyojeong</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>roslint</depend>
  <depend>eigen_stl_containers</depend>

  <!-- Something changed in ROS Lunar / Ubuntu Zesty that requires extra QT5 dependency-->
  <!-- I suspect this depend is more than needed, but was the only dependency available -->
  <!-- from the rosdep list that worked: https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml -->
  <depend>libqt5x11extras5-dev</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
 
</package>
